--- a/package.json
+++ b/package.json
@@ -8,19 +8,24 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/g0ng0n/frontend-nanodegree-mobile-portfolio.git"
-  },
-  "contributors": [],
-  "version": "0.0.1",
-  "main": "Gruntfile.js",
-  "engines": {
-    "node": ">=0.8.0"
+    "url": "git://github.com/g0ng0n/FEND-website-performance-optimization.git"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-ngrok": "^0.2.2",
     "grunt-pagespeed": "^0.2.0",
     "load-grunt-tasks": "^0.5.0",
-    "ngrok": "^0.1.94"
-  }
+    "ngrok": "^0.1.94",
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-contrib-cssmin",
+    "grunt-responsive-images": "^0.1.4"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/g0ng0n/FEND-website-performance-optimization/issues"
+  },
+  "homepage": "https://github.com/g0ng0n/FEND-website-performance-optimization#readme"
 }
