--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend-nanodegree-mobile-portfolio",
   "description": "FEND Project 4",
-  "homepage": "",
+  "homepage": "https://github.com/g0ng0n/FEND-website-performance-optimization#readme",
   "author": {
     "name": "Gonzalo Gisbert",
     "url": "http://www.github.com/g0ng0n"
@@ -12,20 +12,30 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-ngrok": "^0.2.2",
-    "grunt-pagespeed": "^0.2.0",
-    "load-grunt-tasks": "^0.5.0",
-    "ngrok": "^0.1.94",
-    "grunt": "^0.4.5",
+    "grunt-cache-bust": "^0.6.0",
+    "grunt-contrib-compress": "^0.13.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-cssmin": "0.14.0",
+    "grunt-contrib-htmlmin": "^0.4.0",
+    "grunt-contrib-imagemin": "^0.9.4",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt-contrib-uglify": "~0.5.0",
-    "grunt-contrib-cssmin",
-    "grunt-responsive-images": "^0.1.4"
+    "grunt-contrib-uglify": "^0.9.2",
+    "grunt-ngrok": "^0.2.2",
+    "grunt-pagespeed": "^0.2.0",
+    "grunt-responsive-images": "^0.1.4",
+    "grunt-uncss": "^0.4.3",
+    "imagemin-jpegoptim": "^4.0.0",
+    "imagemin-mozjpeg": "^5.1.0",
+    "load-grunt-tasks": "^0.5.0",
+    "ngrok": "^0.1.94"
   },
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/g0ng0n/FEND-website-performance-optimization/issues"
   },
-  "homepage": "https://github.com/g0ng0n/FEND-website-performance-optimization#readme"
+  "dependencies": {
+    "jpegoptim-bin": "^2.0.1",
+    "mozjpeg": "^4.0.1"
+  }
 }
